# BankMalVeder

./: CMakeLists.txt  GLOBAL.h  Menu.c  Menu.h  Program.c
Cliente/: MenuC.c  MenuC.h
DataBase/: Data.c  Data.h
Funcionario/: AlterarCliente.c  AlterarCliente.h  AlterarConta.c  AlterarConta.h  AlterarFun.c  AlterarFun.h  InsersaoC.c  InsersaoC.h  InsersaoF.c  InsersaoF.h  MenuF.c  MenuF.h  Verificador.c  Verificador.h
Imagens_ACII/: Imagens.c  Imagens.h
Model/: Models.h
Tools/: GeraDOR.c  GeraDOR.h
